2016-02-05 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fix. Dos2unix was not quiet in all cases when
	  option -q was used.

2016-02-04 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Changed header for column text/binary to TXTBIN.

2016-02-02 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: New flags for options -i, --info.
	  Flag h : print a header.
	  Flag p : show file names without path.
	  Thanks to Alan S. Jones.

2016-01-31 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Don't package international man pages
	  when ENABLE_NLS is empty.

2016-01-29 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Don't install international man pages when ENABLE_NLS
	  is empty. Thanks to anonymous.

2016-01-28 Erwin Waterlander <waterlan@xs4all.nl>
	* man/*/man1/dos2unix.po: Moved all manual .po file to directory
	  po-man/. The .po files now have their original name.
	* Makefile, man/man1/Makefile: Build international manuals from
	  the .po files in folder po-man/.

2016-01-20 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fixed printing text in unicode UTF-16 mode on Windows,
	  so that when it is redirected to a file, a correct UTF-16 file
	  is created. Thanks to Hans Passant.
	* common.c: Added display encoding methods "unicodebom" and "utf8bom". These
	  methods add a BOM to stdout, which is required for correct redirection
	  in PowerShell.
	* man/man1/dos2unix.pod: Updated manual for option -D.
	* test/testps16.ps1, test/testps8.ps1: Fixed select-string test.

2016-01-16 Erwin Waterlander <waterlan@xs4all.nl>
	* *.c: Fixed printing of East-Asian ANSI multi-byte encoded text on Windows
	  with an East-Asian regional setting.
	  It appears that when setlocale() sets the locale to "" in the beginning
	  of main(), which is done for gettext translations, multi-byte ANSI is
	  printed wrongly. On windows we need to set the locale to "C" to make East-
	  Asian text printed correctly. On Unix setting the locale to "C" would